--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@
 body {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
-  background-color: #fcf3f6;
+  /* background-color: #fcf3f6; */
+  background-color: #e6ccd4;
 }
 
 h1 {
